Linked Dean and Dan's stuff

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="form__input-error-message"></div>
             </div>
 
-            <button class="form__button" type="submit">Continue</button>
+            <a href="home_page.html" class="form__button" type="submit">Continue</a>
 
             <p class="form__text">
                 <a href="#" class="form__link">Forgot your password?</a>
